--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.2",
+    "framer": "^1.2.8",
+    "particles-bg": "^2.5.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-scroll-parallax": "^2.3.4",
+    "react-shapes": "^0.1.0",
+    "react-typical": "^0.1.3",
+    "use-dencrypt-effect": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
