--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "particles-bg": "^2.5.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-burger-menu": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-parallax-component": "^1.0.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll-parallax": "^2.3.4",
     "react-shapes": "^0.1.0",
