--- a/package.json
+++ b/package.json
@@ -5,23 +5,22 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.2",
-    "framer": "^1.2.8",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
+    "framer": "^1.2.9",
     "particles-bg": "^2.5.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-burger-menu": "^2.9.0",
-    "react-dom": "^16.13.1",
-    "react-parallax-component": "^1.0.6",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.14.0",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.2.2",
     "react-scripts": "3.4.3",
     "react-scroll-parallax": "^2.3.4",
-    "react-shapes": "^0.1.0",
-    "react-typical": "^0.1.3",
-    "use-dencrypt-effect": "^1.0.2"
+    "react-typical": "^0.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
