--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
     "framer": "^1.2.9",
+    "material-auto-rotating-carousel": "^3.0.2",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.14.0",
@@ -18,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll-parallax": "^2.3.4",
+    "react-swipeable-views": "^0.13.9",
     "react-typical": "^0.1.3"
   },
   "scripts": {
