--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
 RewriteRule ^(.*)$ https://sepios.fr/$1 [R,L]
+ErrorDocument 404 https://sepios.fr/
