--- a/package.json
+++ b/package.json
@@ -43,7 +43,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "terser-brunch": "^4.0.0"
-  }
+  "devDependencies": {}
 }
