--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "3.4.3",
     "react-scroll-parallax": "^2.3.4",
     "react-swipeable-views": "^0.13.9",
-    "react-typical": "^0.1.3"
+    "react-typical": "^0.1.3",
+    "use-sound": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
