--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,7 +1,7 @@
 RewriteEngine On
 RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://sepios.fr/$1 [R,L]
-ErrorDocument 404 https://sepios.fr/
+RewriteRule ^(.*)$ https://www.sepios.fr/$1 [R,L]
+ErrorDocument 404 https://www.sepios.fr/
 
 # MOD_DEFLATE COMPRESSION
 SetOutputFilter DEFLATE
