--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,6 +20,8 @@ Header append Vary User-Agent env=!dont-vary
 <IfModule mod_expires.c>
  ExpiresActive On
  ExpiresDefault "access plus 7200 seconds"
+ ExpiresByType image/svg+xml "access plus 2592000 seconds"
+ ExpiresByType audio/mp3 "access plus 2592000 seconds"
  ExpiresByType image/jpg "access plus 2592000 seconds"
  ExpiresByType image/jpeg "access plus 2592000 seconds"
  ExpiresByType image/png "access plus 2592000 seconds"
