--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.5.0",
     "bootstrap": "^4.5.3",
-    "framer": "^1.2.9",
+    "framer": "^1.2.11",
     "material-auto-rotating-carousel": "^3.0.2",
-    "react": "^16.14.0",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "react-scroll-parallax": "^2.3.4",
+    "react-scripts": "^4.0.1",
+    "react-scroll-parallax": "^2.3.5",
     "react-swipeable-views": "^0.13.9",
     "react-typical": "^0.1.3",
-    "use-sound": "^1.0.2"
+    "use-sound": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
