--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
-    "bootstrap": "^4.6.0",
-    "framer": "^1.2.14",
+    "framer": "^1.2.25",
+    "framer-motion": "^3.7.0",
     "material-auto-rotating-carousel": "^3.0.2",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-material-ui-carousel": "^2.2.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^4.0.3",
     "react-scroll-parallax": "^2.3.5",
     "react-swipeable-views": "^0.13.9",
     "react-typical": "^0.1.3",
